Fix ie11 wwrapping issue in left nav

--- a/src/components/LeftNav.module.scss
+++ b/src/components/LeftNav.module.scss
@@ -31,9 +31,10 @@
 
     .leftMenu{
         list-style: none;
-        margin: 0 0 0 1em;
+        margin: 0;
         height: 100%;
         width: 100%;
+        padding-left: 1em;
         padding-inline-start: 0;
         li{
             .leftMenuText{
@@ -117,6 +118,7 @@
         z-index: 10;
         min-height: 200px;
         ul{
+            padding-left: 1em;
             padding: 0;
             li{
                 color: #0A0A0A;
